Add message to placeholder

--- a/index.html
+++ b/index.html
@@ -6,30 +6,51 @@
 	<title>Be a father</title>
 		<style type="text/css">
 		body {
-			background-color: #A8F4A8;
+background: rgb(210,255,210);
+background: linear-gradient(30deg, rgba(210,255,210,1) 5%, rgba(168,244,168,1) 79%, rgba(151,223,151,1) 100%);
 			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                "Helvetica Neue", sans-serif;
+            min-height: 95vh;
 		}
 
 		h1 {
 			color: #333333;
-			font-size: 5.9vw;
+			font-size: 5vw;
+			text-align: center;
+		}
+
+		h1 > span {
+			color: #333333;
+			font-size: 3vw;
+			font-weight: normal;
+			text-align: center;
+		}
+
+		h1 > span > span {
+			color: #333333;
+			font-size: 2vw;
+			font-weight: lighter;
+			text-align: center;
 		}
 
 		section {
-			height: 100%;
-			width: 100%;
 		  	display: flex;
 		  	justify-content: center;
 		  	align-items: center;
-		  	min-height: 95vh;
+		  	min-height: 100vh;
 		}
 	</style>
 </head>
 <body>
 	<section>
-		<h1>Hier entsteht Hoffnung</h1>
+		<h1>
+			Verhalte dich wie ein Vater <br>
+			<span> 
+				Leb deine Werte heute <br>
+				<span>Erfahre mehr 2025 <span>
+			<span>
+		</h1>
 	</section>
 </body>
 </html>
